<resources>
    <string name="app_name">AndroidWeek2</string>

    <string name="name">Nama</string>
    <string name="name_hint">ex. John Doe</string>
    <string name="male">Pria</string>
    <string name="female">Wanita</string>
    <string name="regist_button">Daftar</string>
    <string name="birthday">Tanggal Lahir</string>
    <string name="criteria">Kriteria Jodoh</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="hair_type">Tipe Rambut</string>
    <string name="skin_color">Warna Kulit</string>
    <string name="height">Tinggi Badan</string>

    <string-array name="hair_type">
        <item>Panjang</item>
        <item>Pendek</item>
        <item>Botak</item>
    </string-array>

    <string-array name="skin_color">
        <item>Kuning Langsat</item>
        <item>Sawo Matang</item>
        <item>Putih</item>
    </string-array>


    <string-array name="height">
        <item>&#60; 160</item>
        <item>160 - 180</item>
        <item>&#62; 180</item>

    </string-array>
</resources>